<resources>
    <string name="empty_list">Empty List</string>
    <string name="empty_list_description">"Add an app from the app list and it will show up here"</string>
    <string name="add_link">Add Link</string>
    <string name="add_from_link">Add from Link</string>
    <string name="app_link_provided_message">Copy/paste the RESPECT app link provided by the app developer</string>
    <string name="error_link_message">"ERROR: Invalid link. Please check the URL and try again."</string>
    <string name="link_label">Link*</string>
    <string name="example_url_placeholder">e.g. https://</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="try_it">Try it</string>
    <string name="add_app">Add App</string>
    <string name="lessons">Lessons</string>
    <string name="apps">Apps</string>
    <string name="app">App</string>
    <string name="assignments">Assignments</string>
    <string name="clazz">Classes</string>
    <string name="report">Reports</string>
    <string name="select_app">Select app</string>
    <string name="enter_link">Enter link</string>
    <string name="add">Add</string>
    <string name="apps_detail">App detail</string>
    <string name="lesson_list">Lesson List</string>
    <string name="search">Search</string>
    <string name="app_name">App name</string>
    <string name="score_or_progress">Score or Progress</string>
    <string name="play">Play</string>
    <string name="install">Install</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="assign">Assign</string>
    <string name="related_lessons">Related Lessons</string>
    <string name="duration">Duration</string>
    <string name="more_info">More Info</string>
    <string name="remove">Remove</string>
    <string name="invalid_url">Invalid app Url</string>
    <string name="loading">Loading</string>
    <string name="close">Close</string>
    <string name="open">Open</string>

    <string name="supported_by">Supported by:</string>
    <string name="network_powered_by">Network powered by:</string>
    <string name="enter_invite_code_message">Enter the code provided by your teacher or school admin</string>
    <string name="invite_code_label">Invite code</string>
    <string name="enter_code_label">Enter invite code</string>
    <string name="invalid_invite_code">Invalid code, try again</string>
    <string name="already_have_account">I already have an account</string>
    <string name="add_my_school">Add my school</string>
    <string name="required_field">Required field</string>
    <string name="login">Login</string>
    <string name="userId_label">UserId</string>
    <string name="userId_placeholder">user@school.example.org</string>
    <string name="password_label">Password</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="invitation">Invitation</string>
    <string name="invitation_for">Invitation for:</string>
    <string name="i_am_student">I’m a Student</string>
    <string name="i_am_parent">I’m a Parent</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms and conditions</string>

    <string name="your_profile_title">Your profile</string>
    <string name="your_name_label">Your name*</string>
    <string name="your_gender_label">Your gender*</string>
    <string name="your_dob_label">Your date of birth*</string>
    <string name="your_note">Please enter your details accurately.</string>

    <string name="child_profile_title">Child profile</string>
    <string name="child_name_label">Child's name*</string>
    <string name="child_gender_label">Child's gender*</string>
    <string name="child_dob_label">Child's date of birth*</string>
    <string name="child_note">Please enter your child's details.</string>
    <string name="full_name_required">Full name is required</string>
    <string name="gender_required">Gender is required</string>
    <string name="dob_required">Date of birth is required</string>


    <string name="create_account">Create account</string>
    <string name="username_label">Username</string>
    <string name="username_required">Username is required</string>
    <string name="passkey_not_supported">Passkeys are not supported</string>
    <string name="required">Required*</string>
    <string name="signup_with_passkey">Sign-up with passkey</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="other_options">Other options</string>
    <string name="something_went_wrong">Something went wrong.</string>

    <string name="waiting_title">Waiting for approval</string>
    <string name="please_wait">Please wait</string>
    <string name="waiting_for_approval_to_join">Waiting for approval to join %1$s</string>
    <string name="refresh">Refresh</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
    <string name="unspecified">Unspecified</string>


    <string name="phone_memory">Phone memory</string>
    <string name="memory_card">Memory card</string>

    <string name="select_picture_from_gallery">Select picture from gallery</string>
    <string name="select_picture_from_files">Select picture from files</string>
    <string name="take_new_photo_from_camera">Take new photo from camera</string>
    <string name="remove_picture">Remove picture</string>

    <string name="select_date">Select date</string>

    <string name="lets_get_started">Let's get started</string>
    <string name="enter_school_name">School name</string>
    <string name="school_name_placeholder">Type school name here...</string>
    <string name="i_have_an_invite_code">I have an invite code</string>
    <string name="invalid_school_name">Invalid school name</string>
    <string name="school_not_exist_error">This school does not exists</string>

    <string name="enter_school_link">Enter the link provided by your teacher or school admin</string>
    <string name="paste_link_here">Paste the link here</string>
    <string name="invalid_code">Invalid link, try again</string>
    <string name="passkey_title">Passwordless sign-in with passkeys</string>
    <string name="how_passkey_works">How passkeys work?</string>

    <string name="passkey_q1">What are passkeys?</string>
    <string name="passkey_a1">Passkeys are encrypted digital keys you create using your fingerprint, face or other screen-lock method.</string>

    <string name="passkey_q2">Where are passkeys saved?</string>
    <string name="passkey_a2">They are saved to your password manager, so you can sign in on other devices.</string>

    <string name="passkey_q3">Are they better than passwords?</string>
    <string name="passkey_a3">Passkeys protect you from phishing attacks. Passkeys work only on your registered apps and websites, and your password manager protects passkeys from unauthorized access and use.</string>
    <string name="signing_in">Signing in</string>
    <string name="passkey_description">A passkey is a faster and safe way to sign in than a password.Your account is created with one unless you choose another option.</string>
    <string name="sign_up">Sign-up</string>
    <string name="other_way_to_sign_in">Other way to sign-in</string>

    <string name="sign_up_with_password">Sign up with a password</string>
    <string name="sign_in_faster">Sign in faster next time</string>
    <string name="sign_in_faster_description">You can sign in securely with your passkey using your fingerprints, face or other screen-lock method.</string>
    <string name="sign_up_with_passkey">Sign up with a passkey</string>


    <string name="add_account">Add account</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="accounts">Accounts</string>

    <string name="people">People</string>
    <string name="person">Person</string>
    <string name="back">Back</string>

    <string name="add_person">Add person</string>
    <string name="edit_person">Edit person</string>

    <string name="first_names">First names</string>
    <string name="last_name">Last name</string>

    <string name="save">Save</string>
    <string name="edit">Edit</string>
</resources>