...
            value = uiState.assignment.description,
            modifier = Modifier.fillMaxWidth().defaultItemPadding(),
            onValueChange = {
                onEntityChanged(uiState.assignment.copy(description = it))
            },
            label = {
                Text("Description")
            }
        )

        RespectLocalDateField(
            value = uiState.assignment.deadline,
            modifier = Modifier.fillMaxWidth().defaultItemPadding(),
...
