...
            imageName = "Chimple",
            appName = "Chimple: Kids",
            appDescription = "Chimple kids is an educational app to learn basic reading, writing & math skills",
            publications = listOf(
                OpdsPublication(
                    metadata = ReadiumMetadata(
                        title = LangMapStringValue("Lesson 001"),
                        author = listOf(
                            ReadiumContributorStringValue("Mullah Nasruddin")
                        ),
                        language = listOf("en"),
                        modified = "2015-09-29T17:00:00Z",
                        subject = listOf(
...
