appId: world.respect.app
tags:
  - respect
---
- clearState:  world.respect.app
- launchApp
- tapOn: "School name"
- inputText: "respect"
- tapOn: "respect school"   #choose from school list
- tapOn: "UserId"
- inputText: "admin"
- tapOn: "Password"
- inputText: "testpass"
- tapOn:
      text: "Login"
      index: 1
- assertVisible:
    id: "app_title"
    text: "Apps"
- tapOn:
    id: "floating_action_button"
- tapOn: "Add from Link"
- tapOn: "Link*"
- inputText: "https://respect.world/respect-ds/case_valid/appmanifest.json"
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "App detail"
- assertVisible: "My app"
- assertVisible: "Try it"
- assertVisible: "Add App"
- tapOn: "Add App"
- assertVisible: "Lessons"
- tapOn: "Lessons"
- tapOn: "Grade 1"
- tapOn: "Lesson 001"
- assertVisible: "Lesson 001"
- assertVisible: "Open"
- assertVisible: "App name"

